change upload photos for new cars